# CppVulkanDemo

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  b  build.bat  build.py  build.sh  r
Example/: ._CMakeLists.txt  CMakeLists.txt  CMakeLists_linux.txt  linux_demo.cpp
Example/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  linux_demo
Example/build_linux/resources/: shader.vert
Example/platform/: CMakeLists.txt
Example/platform/ios/: ._CMakeLists.txt  ._ViewController.mm  ._main.m  AppDelegate.h  AppDelegate.m  CMakeLists.txt  ViewController.h  ViewController.mm  main.m
Example/platform/ios/vtb-ios-demo/: ._Vtb.c  ._vtb-ios-demo-Bridging-Header.h  ._vtb-ios-demo.xcodeproj  Vtb.c  Vtb.h  vtb-ios-demo-Bridging-Header.h
Example/platform/ios/vtb-ios-demo/vtb-ios-demo/: ._ViewController.swift  AppDelegate.swift  ViewController.swift
Example/platform/ios/vtb-ios-demo/vtb-ios-demo.xcodeproj/: project.pbxproj
Example/platform/ios/vtb-ios-demo/vtb-ios-demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Example/platform/ios/vtb-ios-demo/vtb-ios-demo/Base.lproj/: ._LaunchScreen.storyboard  ._Main.storyboard  Main.storyboard
Example/platform/macos/macos-app/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
Example/platform/macos/macos-app.xcodeproj/: project.pbxproj
Example/platform/macos/macos-app/Assets.xcassets/chalet.dataset/: Contents.json
Example/platform/macos/macos-app/Assets.xcassets/chalet.imageset/: Contents.json
Example/platform/macos/macos-app/Assets.xcassets/frag.dataset/: Contents.json
Example/platform/macos/macos-app/Assets.xcassets/shader.dataset/: Contents.json  shader.vert
Example/platform/macos/macos-app/Assets.xcassets/vert.dataset/: Contents.json
Example/platform/macos/macos-app/Base.lproj/: Main.storyboard
Example/platform/windows/: Readme.md  windows.cpp  windows.sln  windows.vcxproj
Example/platform/windows/vtb/: vtb.vcxproj
Example/resources/: Main.storyboard  vert.spv
Include/: stb_image.h  tiny_obj_loader.h
Include/vtb/: App.hpp  Buffer.hpp  BuilderBase.hpp  CommandBuffer.hpp  CommandPool.hpp  Commands.hpp  Config.hpp  CreatePipeline.hpp  Debug.hpp  Depth.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Extentions.hpp  GetVector.hpp  Glfw.hpp  Glm.hpp  Image.hpp  (+22 more)
Source/: App.cpp  Buffer.cpp  CMakeLists.txt  CommandPool.cpp  Debug.cpp  Depth.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  Image.cpp  ImageView.cpp  Instance.cpp  Render.cpp  RenderPass.cpp  Sampler.cpp  ShaderModule.cpp  Surface.cpp  SwapChain.cpp  Util.cpp
Test/: CMakeLists.txt  test_config.cpp  test_simple.cpp  test_util.cpp
(+8 files in other folders)
